# fms-ehrs

./: .editorconfig  .gitattributes  .gitignore  .prettierrc.toml  00_get_icu_stay_types.py  00_get_icu_stays.py  00_preliminaries.py  01_create_train_val_test_split.py  01_create_train_val_test_split.sh  02_tokenize_train_val_test_split.py  02_tokenize_train_val_test_split.sh  03_train_llama_with_packing.py  03_train_llama_with_packing.sh  03_train_mamba.py  03_train_mamba.sh  03_train_mamba_no_truncation.py  03_train_mamba_no_truncation.sh  03_train_mamba_with_packing.py  03_train_mamba_with_packing.sh  03_train_model.py  03_train_model.sh  03_train_model_with_packing.py  03_train_model_with_packing.sh  03_tune_llama_with_packing.py  03_tune_llama_with_packing.sh  03_tune_mamba.py  03_tune_mamba.sh  03_tune_mamba_with_packing.py  03_tune_mamba_with_packing.sh  03_tune_model.py  03_tune_model.sh  03_tune_model_with_packing.py  03_tune_model_with_packing.sh  04_examine_model.py  04_examine_model.sh  04_examine_models.py  04_examine_models.sh  05_extract_hidden_states.py  05_extract_hidden_states.sh  06_extract_outcomes.py  (+103 more)
fms_ehrs/config/: cfg_mimic_add_omr.yaml  cfg_mimic_default.yaml  cfg_mimic_no_text.yaml  clif-20.yaml  clif-21-exp3-icu.yaml  clif-21-fused.yaml  clif-21.yaml  config-20.yaml  config-21++.yaml  config-21-fused++.yaml  config-21-fused.yaml  config-21.yaml  config-mimic-meds-ed.yaml  config-mimic-meds.yaml  config-tokenizer-mimiciv.yaml  config-tokenizer-mimiciv_backup.yaml  config-tokenizer.yaml  mimic-meds-ed.yaml  mimic-meds-exp3-icu.yaml  mimic-meds.yaml
fms_ehrs/framework/: continuous_encoder.py  convert_csv_to_parquet.py  data_loader.py  dataset.py  debug_clif.py  logger.py  model_wrapper.py  (+25 more)
notes/: adding_an_outcome.md  docs-internal.md  extract-data-from-splits.md  generic-tokenizer.md  mimic-to-clif-conversion.md  training-randi.md
slurm/: 00_create_dev_sample.sh  00_create_dev_sample_mimic.sh  00_create_dev_samples.sh  00_run_clifpy.sh  00_run_extub.sh  00_run_sofa.sh  00a_preprocess_clifpy.sh  00b_create_dev_samples.sh  01_create_splits.sh  01_create_train_val_test_split.sh  01_partition_posthoc.sh  01b_add_posthoc_data.sh  01c_recreate_QC_train_val_test_split.sh  01d_create_clif_21_dev_sample.sh  02_tokenize_splits.sh  02_tokenize_splits_fused.sh  02_tokenize_train_val_test_split.sh  02a_tokenize_splits.sh  02b_extract_outcomes.sh  02b_tokenize_QC_w_time_spacers.sh  02c_filter_dataset.sh  03_extract_outcomes.sh  03_tune_model.sh  03_tune_model_1gpu.sh  03a_tune_model.sh  03a_tune_qwen_orig.sh  03a_tune_qwen_small.sh  03b_train_model.sh  03b_tune_gemma.sh  03b_tune_model.sh  03b_tune_model_orig_2.sh  03b_tune_model_small_2.sh  03c_tune_gemma_orig.sh  04_examine_models.sh  04_extract_all_hidden_states.sh  04_tune_model.sh  04a_extract_all_hidden_states.sh  04a_extract_all_reps.sh  04b_learn_protos.sh  04b_process_all_hidden_states.sh  (+76 more)
src/: pyproject.toml
tests/: test_windowed_padded_dataset.py
workflows/: 0_clif_mimic.sh  0_retokenize_retrain.sh  1_retokenize_retrain.sh  2_extract_predict.sh
(+126 files in other folders)
