[project]
name = "fms-ehrs"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md"}
dependencies = [
  "black>=24.10",
  "datasets>=3.2",
  "fire>=0.7",
  "isort>=5.13",
  "joblib>=1.4",
  "jq>=1.8.0",
  "kaleido>=0.2,<1",
  "lightgbm>=4.5",
  "numba>=0.61",
  "numpy>=1.26,<2",
  "optuna>=4.2",
  "pacmap==0.8.0",
  "pandas>=2.2",
  "pip>=25.1",
  "plotly~=5.24.1",
  "polars>=1.20",
  "ray",
  "scikit-learn>=1.6",
  "scipy>=1.15",
  "seaborn>=0.13.2",
  "statsmodels>=0.14",
  "torch",
  "transformers>=4.48",
  "trl==0.13.0",
  "tqdm>=4.67",
  "umap-learn==0.5.7",
  "xgboost>=2.1",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
version = "25.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages]
find = {}

[build-system]
requires = [
  "setuptools>=75.0",
  "numpy>=1.26,<2"
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = [
    "py312", "py313"
]

[tool.isort]
profile = "black"
